# refac

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT.txt  README.md
.github/: copilot-instructions.md
src/: agent.rs  anthropic.rs  api.rs  api_client.rs  backend.rs  common.rs  config_files.rs  default_finetune.toml  edit.rs  main.rs  openai.rs  powers.rs  pretrain_sample.rs  prompt.rs  tokenizer.rs
