[package]
name = "refac"
version = "0.1.0"
edition = "2021"
description = """
Transform some text given a generic natural language prompt.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
openai-api = "0.1.4"
reqwest = { version = "0.11.14", features = ["blocking", "json", "multipart"] }
rpassword = "7.2.0"
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
tap = "1.0.1"
toml = "0.7.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
xdg = "2.4.1"
